manifests/solid-ts-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "solid-ts-app" 
  namespace: default 
  annotations:
   prometheus.io/scrape: 'true'
   prometheus.io/port: "8090"
  labels:
    app: solid-ts-app
spec:
  type: ClusterIP
  ports:
  # - name: jmx-exporter
  #   port: 8090
  #   protocol: TCP
  #   targetPort: 8090
  #   # nodePort: 30003
  - name : solid-ts-app
    port: 8080
    targetPort: 8080
  selector:
    app: solid-ts-app
